--- a/pages/detailArtikel/detailArtikel.html
+++ b/pages/detailArtikel/detailArtikel.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../assets/css/custom.css" />
-    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../assets/css/owl.theme.default.css" />
+    <title>Extensi Visual Studio Code Terpopuler</title>
+    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../assets/css/custom.css" />
   </head>
-  <body>
+  <body class="back1">
     <nav class="navbar navbar-expand-md navbar-light bg-darkblue">
       <div class="container">
-        <a class="navbar-brand text-white" href="#">
-          <img src="../assets/images/logo.svg" alt="HimaIndonesia" />
+        <a class="navbar-brand text-white" href="javaScript:void(0)">
+          <img src="../../assets/images/icons/logo.svg" alt="HimaIndonesia" />
         </a>
         <button
           class="navbar-toggler text-white-50"
@@ -33,7 +31,7 @@
               <a
                 class="nav-link text-white fs-6 font-medium mx-2"
                 aria-current="page"
-                href="#"
+                href="../../index.html"
                 >Home</a
               >
             </li>
@@ -57,15 +55,23 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item font-medium fs-6" href="#">Kabinet</a>
+                  <a
+                    class="dropdown-item font-medium fs-6"
+                    href="../kabinet.html"
+                    >Kabinet</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item font-medium fs-6" href="#"
+                  <a
+                    class="dropdown-item font-medium fs-6"
+                    href="../artikel.html"
                     >Struktur</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item font-medium fs-6" href="#"
+                  <a
+                    class="dropdown-item font-medium fs-6"
+                    href="../sejarah.html"
                     >Sejarah Organisasi</a
                   >
                 </li>
@@ -74,12 +80,14 @@
             <li class="nav-item">
               <a
                 class="nav-link text-black font-medium fs-6 mx-2 active-button"
-                href="#"
+                href="../artikel.html"
                 >Artikel</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white font-medium fs-6 mx-2" href="#"
+              <a
+                class="nav-link text-white font-medium fs-6 mx-2"
+                href="../galeri.html"
                 >Galery</a
               >
             </li>
@@ -94,8 +102,8 @@
           <div>
             <div class="text-red fs-5">Technology</div>
             <h1 class="fw-bold fs-2">
-              Java is the<br />
-              Popular Programming Language 2021
+              Extensi Visual Studio<br />
+              Code Terpopuler
             </h1>
             <div class="text-red fs-5">by Hikaku S.Pd</div>
             <div class="text-abu fs-6">10 Oktober 2021</div>
@@ -105,42 +113,26 @@
         <div class="col-md-3"></div>
         <div class="col-md-4 d-flex align-items-center">
           <div class="">
-            <a href="">
+            <a href="./detailArtikel1.html">
               <img
                 class="ms-5 ps-6"
-                src="../assets/images/NextIcon.png"
+                src="../../assets/images/detailArtikel/NextIcon.png"
                 alt=""
               />
             </a>
             <p>
-              <a class="text-decoration-none" href="">
+              <a class="text-decoration-none" href="./detailArtikel1.html">
                 <span class="fw-bold fs-2 next-heading">Next Article </span>
               </a>
             </p>
             <div class="text-red fs-5">Technology</div>
             <h1 class="fw-bold fs-2">
-              Python is the
+              Refleksi diri
               <br />
-              Popular Programming Language of 2022
+              dengan kode program
             </h1>
           </div>
         </div>
-
-        <!-- <div class="col-md-8 float-start">
-              <div class="position-relative">
-                  <img
-                  style="z-index: 1;"
-                    class="img-fluid"
-                    src="../assets/images/detailNews1.png"
-                    alt=""
-                  />
-                  <div class="position-absolute">
-                      <div style="top: 80px;" class="d-flex align-items-center">
-                          Hello guys
-                      </div>
-                  </div>
-              </div>
-          </div> -->
       </div>
     </div>
 
@@ -186,7 +178,11 @@
 
     <!--footer-->
     <div class="mt-5">
-      <img src="../assets/images/Footer.png" class="img-fluid" alt="" />
+      <img
+        src="../../assets/images/Footer.png"
+        class="img-fluid w-100"
+        alt=""
+      />
     </div>
 
     <div class="bg-darkblue">
@@ -197,7 +193,11 @@
               <ul class="list-unstyled">
                 <li>
                   <p class="font-thin text-white text-decoration-underline">
-                    <img class="me-3" src="../assets/images/gmail.svg" alt="" />
+                    <img
+                      class="me-3"
+                      src="../../assets/images/icons/gmail.svg"
+                      alt=""
+                    />
                     hima@gmail.com
                   </p>
                 </li>
@@ -205,7 +205,7 @@
                   <p class="font-thin text-white text-decoration-underline">
                     <img
                       class="me-3"
-                      src="../assets/images/instagram.svg"
+                      src="../../assets/images/icons/instagram.svg"
                       alt=""
                     />
                     hima.indonesia
@@ -215,7 +215,7 @@
                   <p class="font-thin text-white text-decoration-underline">
                     <img
                       class="me-3"
-                      src="../assets/images/youtube.svg"
+                      src="../../assets/images/icons/youtube.svg"
                       alt=""
                     />
                     hima.indonesia
@@ -230,20 +230,30 @@
               </h2>
               <ul class="list-unstyled">
                 <li>
-                  <a href="#" class="font-thin text-white py-2 d-block">Home</a>
+                  <a
+                    href="../../index.html"
+                    class="font-thin text-white py-2 d-block"
+                    >Home</a
+                  >
                 </li>
                 <li>
-                  <a href="#" class="font-thin text-white py-2 d-block"
+                  <a
+                    href="../sejarah.html"
+                    class="font-thin text-white py-2 d-block"
                     >Profile Organisasi</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="font-thin text-white py-2 d-block"
+                  <a
+                    href="../artikel.html"
+                    class="font-thin text-white py-2 d-block"
                     >Artikel</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="font-thin text-white py-2 d-block"
+                  <a
+                    href="../galeri.html"
+                    class="font-thin text-white py-2 d-block"
                     >Galery</a
                   >
                 </li>
@@ -273,7 +283,15 @@
         </div>
         <div class="row mt-3 pt-2 border-top">
           <div class="col-md-12 text-center">
-            <p class="font-medium text-white copyright">
+            <p
+              class="
+                text-decoration-underline
+                font-medium
+                fs-6
+                text-white
+                copyright
+              "
+            >
               Copyright &copy;
               <script>
                 document.write(new Date().getFullYear());
@@ -285,7 +303,7 @@
       </footer>
     </div>
 
-    <script src="../js/jquery.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="../../js/jquery.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
   </body>
 </html>
