--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/custom.css" />
+    <title>Home</title>
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/css/owl.theme.default.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
   </head>
-  <body>
+  <body class="back1">
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-light bg-darkblue">
       <div class="container">
-        <a class="navbar-brand text-white" href="#">
-          <img src="assets/images/logo.svg" alt="HimaIndonesia" />
+        <a class="navbar-brand text-white" href="javaScript:void(0)">
+          <img src="./assets/images/icons/logo.svg" alt="HimaIndonesia" />
         </a>
         <button
           class="navbar-toggler text-white-50"
@@ -34,7 +34,7 @@
               <a
                 class="nav-link text-black fs-6 font-medium mx-2 active-button"
                 aria-current="page"
-                href="#"
+                href="javaScript:void(0)"
                 >Home</a
               >
             </li>
@@ -58,27 +58,39 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item font-medium fs-6" href="#">Kabinet</a>
+                  <a
+                    class="dropdown-item font-medium fs-6"
+                    href="./pages/kabinet.html"
+                    >Kabinet</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item font-medium fs-6" href="#"
+                  <a
+                    class="dropdown-item font-medium fs-6"
+                    href="./pages/strukturOrganisasi.html"
                     >Struktur</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item font-medium fs-6" href="#"
+                  <a
+                    class="dropdown-item font-medium fs-6"
+                    href="./pages/sejarah.html"
                     >Sejarah Organisasi</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white font-medium fs-6 mx-2" href="#"
+              <a
+                class="nav-link text-white font-medium fs-6 mx-2"
+                href="./pages/artikel.html"
                 >Artikel</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white font-medium fs-6 mx-2" href="#"
+              <a
+                class="nav-link text-white font-medium fs-6 mx-2"
+                href="./pages/galeri.html"
                 >Galery</a
               >
             </li>
@@ -119,31 +131,35 @@
           </div>
         </div>
       </div>
-      <img class="img-fluid" src="./assets/images/Banner.png" alt="" />
+      <img
+        class="img-fluid w-100 h-100"
+        src="./assets/images/home/Banner.png"
+        alt=""
+      />
     </div>
 
     <!--Carousel -->
-    <div class="hidden">
+    <div class="col-12 m-auto">
       <div class="pt-5 bg-birumuda">
         <div class="owl-carousel owl-theme">
           <div class="item">
             <img
-              src="assets/images/Poster1.png"
-              class="img-fluid rounded-4"
+              src="./assets/images/home/Poster1.png"
+              class="img-fluid rounded-4 img-fluid"
               alt="..."
             />
           </div>
           <div class="item">
             <img
-              src="assets/images/Poster2.png"
-              class="img-fluid rounded-4"
+              src="./assets/images/home/Poster2.png"
+              class="img-fluid rounded-4 img-fluid"
               alt="..."
             />
           </div>
           <div class="item">
             <img
-              src="assets/images/Poster3.png"
-              class="img-fluid rounded-4"
+              src="./assets/images/home/Poster3.png"
+              class="img-fluid rounded-4 img-fluid"
               alt="..."
             />
           </div>
@@ -155,9 +171,15 @@
     <div class="bg-latestNews mt-5 mb-5" id="scrool">
       <div class="container">
         <div class="row">
-          <div class="col-5">
+          <div class="col-md-5">
             <h1 class="font-bold mb-3">Latest News</h1>
-            <img src="assets/images/HotNews.png" alt="" class="img-fluid" />
+            <a href="./pages/detailArtikel/detailArtikel.html">
+              <img
+                src="./assets/images/home/HotNews.png"
+                alt=""
+                class="img-fluid w-100"
+              />
+            </a>
           </div>
 
           <div class="col-sm-12 col-md-6 pt-6 ps-md-5">
@@ -165,12 +187,13 @@
               <div class="col-md-5 img-fluid">
                 <div class="position-relative">
                   <img
+                    class="w-100 h-100"
                     style="z-index: 1"
-                    src="assets/images/news1.png"
+                    src="./assets/images/home/news1.png"
                     alt=""
                   />
                   <a
-                    href=""
+                    href="./pages/detailArtikel/detailArtikel.html"
                     class="
                       font-thin
                       position-absolute
@@ -178,7 +201,7 @@
                       ms-3
                       mb-3
                     "
-                    style="z-index: 2; bottom: 0px"
+                    style="z-index: 2; bottom: 0px; left: 0"
                   >
                     Visual Studio Code
                   </a>
@@ -191,12 +214,13 @@
               <div class="col-md-5 img-fluid ms-sm-0 ms-md-5 ps-sm-0 ps-md-6">
                 <div class="position-relative">
                   <img
+                    class="w-100 h-100"
                     style="z-index: 1"
-                    src="assets/images/news2.png"
+                    src="./assets/images/home/news2.png"
                     alt=""
                   />
                   <a
-                    href=""
+                    href="./pages/detailArtikel/detailArtikel.html"
                     class="
                       font-thin
                       position-absolute
@@ -204,7 +228,7 @@
                       ms-3
                       mb-3
                     "
-                    style="z-index: 2; bottom: 0px"
+                    style="z-index: 2; bottom: 0px; left: 0"
                   >
                     Coding is my life
                   </a>
@@ -213,23 +237,26 @@
             </div>
 
             <div class="row">
-              <div class="col-5 img-fluid">
-                  <img
-                    style="z-index: 1"
-                    src="assets/images/news3.png"
-                    alt=""
-                  />
-                  <a
-                    href=""
-                    class="
-                      font-th
-                      text-white text-decoration-none
-                      ms-3
-                      mb-3
-                    "
-                    style="z-index: 2; bottom: 0px"
-                  >
-                    Revolusi Dunia
+              <div class="col-md-5 img-fluid position-relative">
+                <img
+                  class="w-100 h-100"
+                  style="z-index: 1"
+                  src="./assets/images/home/news3.png"
+                  alt=""
+                />
+                <a
+                  href="./pages/detailArtikel/detailArtikel.html"
+                  class="
+                    position-absolute
+                    font-thin
+                    text-white text-decoration-none
+                    ms-3
+                    mb-3
+                  "
+                  style="z-index: 2; bottom: 0px; left: 0"
+                >
+                  Revolusi Dunia
+                </a>
               </div>
             </div>
           </div>
@@ -240,56 +267,59 @@
     <!--Upcoming Events-->
     <div class="bg-birumuda">
       <div class="container pt-4">
-        <h1 class="fw-bold mb-4">Upcoming Events</h1>
-        <div class="owl-carousel owl-theme">
-          <div class="item">
-            <div class="card ms-none px-4 pt-4" style="width: 18rem">
-              <img
-                src="assets/images/Events1.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="mb-5 card-text text-center fw-bold">
-                  Webinar Nasional
-                </p>
+        <div class="row">
+          <div class="col-12 m-auto">
+            <h1 class="fw-bold mb-4">Upcoming Events</h1>
+            <div class="owl-carousel owl-theme">
+              <div class="item mb-4">
+                <div class="card rounded-4 ms-none px-4 pt-4">
+                  <img
+                    src="./assets/images/home/Events1.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="fs-4 mb-5 card-text text-center fw-bold">
+                      Webinar Nasional
+                    </p>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="card px-4 pt-4" style="width: 18rem">
-              <img
-                src="assets/images/Events2.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="mb-5 card-text text-center fw-bold">Swim Campaign</p>
+              <div class="item">
+                <div class="card rounded-4 px-4 pt-4">
+                  <img
+                    src="./assets/images/home/Events2.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="fs-4 mb-5 card-text text-center fw-bold">
+                      Swim Campaign
+                    </p>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="card px-4 pt-4" style="width: 18rem">
-              <img
-                src="assets/images/Events3.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="mb-5 card-text text-center fw-bold">
-                  Webinar Nasional
-                </p>
+              <div class="item">
+                <div class="card rounded-4 px-4 pt-4">
+                  <img
+                    src="./assets/images/home/Events3.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="mb-5 card-text fs-4 text-center fw-bold">
+                      Webinar Nasional
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-
-      <!--footer-->
-      <div class="bg-birumuda mt-5">
-        <img src="assets/images/Footer.png" class="img-fluid" alt="" />
+      <!--Footer-->
+      <div class="mt-5">
+        <img src="../assets/images/Footer.png" class="img-fluid w-100" alt="" />
       </div>
     </div>
 
@@ -301,7 +331,11 @@
               <ul class="list-unstyled">
                 <li>
                   <p class="font-thin text-white text-decoration-underline">
-                    <img class="me-3" src="assets/images/gmail.svg" alt="" />
+                    <img
+                      class="me-3"
+                      src="./assets/images/icons/gmail.svg"
+                      alt=""
+                    />
                     hima@gmail.com
                   </p>
                 </li>
@@ -309,7 +343,7 @@
                   <p class="font-thin text-white text-decoration-underline">
                     <img
                       class="me-3"
-                      src="assets/images/instagram.svg"
+                      src="./assets/images/icons/instagram.svg"
                       alt=""
                     />
                     hima.indonesia
@@ -317,7 +351,11 @@
                 </li>
                 <li>
                   <p class="font-thin text-white text-decoration-underline">
-                    <img class="me-3" src="assets/images/youtube.svg" alt="" />
+                    <img
+                      class="me-3"
+                      src="./assets/images/icons/youtube.svg"
+                      alt=""
+                    />
                     hima.indonesia
                   </p>
                 </li>
@@ -333,17 +371,23 @@
                   <a href="#" class="font-thin text-white py-2 d-block">Home</a>
                 </li>
                 <li>
-                  <a href="#" class="font-thin text-white py-2 d-block"
+                  <a
+                    href="./pages/sejarah.html"
+                    class="font-thin text-white py-2 d-block"
                     >Profile Organisasi</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="font-thin text-white py-2 d-block"
+                  <a
+                    href="./pages/artikel.html"
+                    class="font-thin text-white py-2 d-block"
                     >Artikel</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="font-thin text-white py-2 d-block"
+                  <a
+                    href="./pages/galeri.html"
+                    class="font-thin text-white py-2 d-block"
                     >Galery</a
                   >
                 </li>
@@ -371,9 +415,17 @@
             </div>
           </div>
         </div>
-        <div class="row mt-3 pd-2">
+        <div class="row mt-3 pt-2 border-top">
           <div class="col-md-12 text-center">
-            <p class="font-medium text-white copyright">
+            <p
+              class="
+                text-decoration-underline
+                font-medium
+                fs-6
+                text-white
+                copyright
+              "
+            >
               Copyright &copy;
               <script>
                 document.write(new Date().getFullYear());
