--- a/pages/galeri.html
+++ b/pages/galeri.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artikel</title>
+    <title>Galeri</title>
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/custom.css" />
+    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="../assets/css/owl.theme.default.css" />
   </head>
   <body class="back1">
     <!--Navbar-->
@@ -80,15 +82,15 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-black font-medium fs-6 mx-2 active-button"
-                href="javaScript:void(0)"
+                class="nav-link text-white font-medium fs-6 mx-2"
+                href="./artikel.html"
                 >Artikel</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-white font-medium fs-6 mx-2"
-                href="./galeri.html"
+                class="nav-link text-black font-medium fs-6 mx-2 active-button"
+                href="javaScript:void(0)"
                 >Galery</a
               >
             </li>
@@ -97,180 +99,182 @@
       </div>
     </nav>
 
-    <div class="container mt-4">
-      <!--Latest News-->
-      <div class="row">
-        <h1 class="text-center fw-bold">Artikel</h1>
-        <div class="fs-3 mb-md-3 fw-bold text-abu">Latest News</div>
-        <div class="col-md-4 mb-sm-3 position-relative">
-          <a href="./detailArtikel/detailArtikel.html">
-            <img
-              src="../assets/images/artikel/news4.png"
-              class="img-fluid rounded-4 w-100 h-100"
-              alt=""
-            />
-            <div
-              class="position-absolute text-white fs-4"
-              style="bottom: 1rem; margin-left: 1rem; z-index: 2"
+    <!--ItemGalery-->
+    <h1 class="text-center fw-bolder mt-5 mb-4 fs-1">Galery</h1>
+    <div class="container">
+      <div class="row p-0 m-0 pb-5">
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
+            <a
+              class="text-decoration-none"
+              href="./detailGaleri/detailGaleri.html"
             >
-              Extensi Visual Studio Code Terpopuler
-            </div>
-          </a>
-        </div>
-
-        <div class="col-md-8">
-          <div class="row">
-            <div class="col-md-12 position-relative">
-              <a href="./detailArtikel/detailArtikel.html">
-                <img
-                  style="z-index: 1"
-                  class="img-fluid rounded-4 w-100 h-100"
-                  src="../assets/images/artikel/news5.png"
-                  alt=""
-                />
-                <div
-                  class="position-absolute text-white fs-4"
-                  style="margin-left: 1rem; bottom: 1rem; z-index: 2"
-                >
-                  Buku adalah jendela dunia
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="row mt-md-4">
-            <div class="col-md-6 col-sm-12">
-              <div class="position-relative">
-                <a href="./detailArtikel/detailArtikel1.html">
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news6.png"
-                    alt=""
-                    style="z-index: 1"
-                  />
-                  <div
-                    class="position-absolute text-white fs-4"
-                    style="margin-left: 1rem; bottom: 1rem; z-index: 2"
-                  >
-                    Refleksi diri dengan kode program
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-md-6 position-relative">
-              <a href="./detailArtikel/detailArtikel.html">
-                <img
-                  class="img-fluid rounded-4"
-                  src="../assets/images/artikel/news7.png"
-                  alt=""
-                />
-                <div
-                  class="position-absolute text-white fs-4"
-                  style="margin-left: 1rem; bottom: 1rem; z-index: 2"
-                >
-                  Programmer zaman now
-                </div>
-              </a>
-            </div>
+              <img
+                src="../assets/images/galeri/galeri1.png"
+                class="rounded-galeri w-100 mb-3"
+                alt=""
+              />
+              <p class="text-black fw-bold fs-4">Pentas Seni</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">10 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">12 Oktober 2021</p>
+            </a>
           </div>
         </div>
-
-        <a href="" class="text-decoration-none text-end">More Stories ></a>
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
+            <a
+              class="text-decoration-none"
+              href="./detailGaleri/detailGaleri.html"
+            >
+              <img
+                src="../assets/images/galeri/galeri2.png"
+                class="rounded-galeri w-100 mb-3"
+                alt=""
+              />
+              <p class="fw-bold fs-4 text-black">Wisudawan 2021</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">10 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">11 Oktober 2021</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
+            <a
+              class="text-decoration-none"
+              href="./detailGaleri/detailGaleri.html"
+            >
+              <img
+                src="../assets/images/galeri/galeri3.png"
+                class="rounded-galeri w-100 mb-3"
+                alt=""
+              />
+              <p class="fw-bold fs-4 text-black">Demonstrasi Mahasiswa</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">10 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">10 Oktober 2021</p>
+            </a>
+          </div>
+        </div>
       </div>
 
-      <!--Top Stories-->
-      <div>
-        <div class="fs-3 mb-md-3 fw-bold text-abu">Top Stories</div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="row">
-              <div class="col-md-6">
-                <a
-                  class="text-decoration-none"
-                  href="./detailArtikel/detailArtikel.html"
-                >
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news8.png"
-                    alt=""
-                  />
-                  <div class="fs-5 mt-md-2 text-black">
-                    Cara Mengoding dengan baik dan benar
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a
-                  class="text-decoration-none"
-                  href="./detailArtikel/detailArtikel.html"
-                >
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news9.png"
-                    alt=""
-                  />
-                  <div class="fs-5 mt-md-2 text-black">
-                    Tips membeli Laptop untuk mahasiswa Sistem Informasi
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="row mt-md-4">
-              <div class="col-md-6">
-                <a
-                  href="./detailArtikel/detailArtikel.html"
-                  class="text-decoration-none"
-                >
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news10.png"
-                    alt=""
-                  />
-                  <div class="text-black fs-5 mt-md-2">
-                    Pembelajaran di ero pandemi Covid-19
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a
-                  class="text-decoration-none"
-                  href="./detailArtikel/detailArtikel.html"
-                >
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news11.png"
-                    alt=""
-                  />
-                  <div class="fs-5 mt-md-2 text-black">
-                    Sistem pembelajaran baru di tahun yang baru
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
+      <div class="row p-0 m-0 pb-5">
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
             <a
-              href="./detailArtikel/detailArtikel.html"
+              href="./detailGaleri/detailGaleri.html"
               class="text-decoration-none"
             >
               <img
-                class="img-fluid rounded-4"
-                src="../assets/images/artikel/news12.png"
+                src="../assets/images/galeri/galeri4.png"
+                class="rounded-galeri w-100 mb-3"
                 alt=""
               />
-              <div class="fs-5 mt-md-2 text-black">
-                HIMA SI UNUSA Sukses Gelar Workshop Videography Nasional 2021
-              </div>
+              <p class="fw-bold fs-4 text-black">Pentas Seni</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">9 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">09 Oktober 2021</p>
             </a>
           </div>
-          <a href="" class="text-decoration-none text-end">More Stories ></a>
+        </div>
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
+            <a
+              href="./detailGaleri/detailGaleri.html"
+              class="text-decoration-none"
+            >
+              <img
+                src="../assets/images/galeri/galeri5.png"
+                class="rounded-galeri w-100 mb-3"
+                alt=""
+              />
+              <p class="fw-bold fs-4 text-black">Rapat Koordinasi</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">10 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">08 Oktober 2021</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
+            <a
+              href="./detailGaleri/detailGaleri.html"
+              class="text-decoration-none"
+            >
+              <img
+                src="../assets/images/galeri/galeri6.png"
+                class="rounded-galeri w-100 mb-3"
+                alt=""
+              />
+              <p class="fw-bold fs-4 text-black">LKMMTD 2021</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">10 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">07 Oktober 2021</p>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row p-0 m-0 pb-5">
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
+            <a
+              href="./detailGaleri/detailGaleri.html"
+              class="text-decoration-none"
+            >
+              <img
+                src="../assets/images/galeri/galeri7.png"
+                class="rounded-galeri w-100 mb-3"
+                alt=""
+              />
+              <p class="fw-bold fs-4 text-black">Podcast</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">10 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">06 Oktober 2021</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
+            <a
+              href="./detailGaleri/detailGaleri.html"
+              class="text-decoration-none"
+            >
+              <img
+                src="../assets/images/galeri/galeri8.png"
+                class="rounded-galeri w-100 mb-3"
+                alt=""
+              />
+              <p class="fw-bold fs-4 text-black">Rapat Proker</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">10 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">05 Oktober 2021</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 pb-4 pl-1">
+          <div class="box rounded-galeri p-4 lh-1 shadow bg-white">
+            <a
+              href="./detailGaleri/detailGaleri.html"
+              class="text-decoration-none"
+            >
+              <img
+                src="../assets/images/galeri/galeri9.png"
+                class="rounded-galeri w-100 mb-3"
+                alt=""
+              />
+              <p class="fw-bold fs-4 text-black">Kebersamaan</p>
+              <p class="text-secondary">Surabaya, Indonesia</p>
+              <p class="text-secondary">10 Items</p>
+              <p class="text-info fw-bold pb-3 fs-4">04 Oktober 2021</p>
+            </a>
+          </div>
         </div>
       </div>
     </div>
 
-    <!--footer-->
+    <!--Footer-->
     <div class="mt-5">
       <img src="../assets/images/Footer.png" class="img-fluid w-100" alt="" />
     </div>
@@ -335,14 +339,14 @@
                 </li>
                 <li>
                   <a
-                    href="javaScript:void(0)"
+                    href="./artikel.html"
                     class="font-thin text-white py-2 d-block"
                     >Artikel</a
                   >
                 </li>
                 <li>
                   <a
-                    href="./galeri.html"
+                    href="javaScript:void(0)"
                     class="font-thin text-white py-2 d-block"
                     >Galery</a
                   >
