--- a/pages/sejarah.html
+++ b/pages/sejarah.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artikel</title>
+    <title>Sejarah Organisasi</title>
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/custom.css" />
   </head>
+
   <body class="back1">
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-light bg-darkblue">
@@ -39,9 +40,10 @@
             <li class="nav-item dropdown">
               <a
                 class="
+                  active-button
                   nav-link
                   dropdown-toggle
-                  text-white
+                  text-black
                   font-medium
                   fs-6
                   mx-2
@@ -72,7 +74,7 @@
                 <li>
                   <a
                     class="dropdown-item font-medium fs-6"
-                    href="./sejarah.html"
+                    href="javaScript:void(0)"
                     >Sejarah Organisasi</a
                   >
                 </li>
@@ -80,15 +82,15 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link text-black font-medium fs-6 mx-2 active-button"
-                href="javaScript:void(0)"
+                class="nav-link text-white font-medium fs-6 mx-2"
+                href="./artikel.html"
                 >Artikel</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link text-white font-medium fs-6 mx-2"
-                href="./galeri.html"
+                href="./sejarah.html"
                 >Galery</a
               >
             </li>
@@ -97,180 +99,75 @@
       </div>
     </nav>
 
-    <div class="container mt-4">
-      <!--Latest News-->
-      <div class="row">
-        <h1 class="text-center fw-bold">Artikel</h1>
-        <div class="fs-3 mb-md-3 fw-bold text-abu">Latest News</div>
-        <div class="col-md-4 mb-sm-3 position-relative">
-          <a href="./detailArtikel/detailArtikel.html">
-            <img
-              src="../assets/images/artikel/news4.png"
-              class="img-fluid rounded-4 w-100 h-100"
-              alt=""
-            />
-            <div
-              class="position-absolute text-white fs-4"
-              style="bottom: 1rem; margin-left: 1rem; z-index: 2"
-            >
-              Extensi Visual Studio Code Terpopuler
-            </div>
-          </a>
+    <div class="container pt-5 pb-5">
+      <div class="row p-0 m-0 justify-content-center">
+        <div class="col-md-5 pb-2 pl-1">
+          <h1 class="fw-bold text-danger">
+            Sejarah <span class="text-dark">Organisasi</span>
+          </h1>
+          <p class="text-justify">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+            accusamus deleniti cupiditate adipisci provident nobis laboriosam,
+            et, debitis nulla consequatur sint? Ratione magni, voluptatibus ex
+            unde corporis voluptate quod reprehenderit ipsa ipsum ullam, atque
+            distinctio dolores asperiores aliquam, ad nostrum molestiae quis
+            perspiciatis molestias? Aliquam omnis fugit iste sed placeat
+            aspernatur illum consequuntur, voluptatibus ipsam neque modi
+            recusandae mollitia doloremque! Rem quo quis perspiciatis quod iusto
+            nihil alias molestias omnis illo. Nesciunt suscipit voluptates
+            facere illum id dicta provident porro veniam perspiciatis, nam non
+            at optio, repellat deleniti consequatur ipsam, tempore architecto
+            aut eius. Dolorum molestias ipsa iure consequuntur officia modi
+            illum voluptatem quo. Reiciendis distinctio placeat laborum aperiam
+            voluptates fugiat consectetur. Autem deleniti quam enim velit illum
+            commodi doloremque unde iusto fuga id? Quaerat.
+          </p>
         </div>
-
-        <div class="col-md-8">
-          <div class="row">
-            <div class="col-md-12 position-relative">
-              <a href="./detailArtikel/detailArtikel.html">
-                <img
-                  style="z-index: 1"
-                  class="img-fluid rounded-4 w-100 h-100"
-                  src="../assets/images/artikel/news5.png"
-                  alt=""
-                />
-                <div
-                  class="position-absolute text-white fs-4"
-                  style="margin-left: 1rem; bottom: 1rem; z-index: 2"
-                >
-                  Buku adalah jendela dunia
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="row mt-md-4">
-            <div class="col-md-6 col-sm-12">
-              <div class="position-relative">
-                <a href="./detailArtikel/detailArtikel1.html">
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news6.png"
-                    alt=""
-                    style="z-index: 1"
-                  />
-                  <div
-                    class="position-absolute text-white fs-4"
-                    style="margin-left: 1rem; bottom: 1rem; z-index: 2"
-                  >
-                    Refleksi diri dengan kode program
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-md-6 position-relative">
-              <a href="./detailArtikel/detailArtikel.html">
-                <img
-                  class="img-fluid rounded-4"
-                  src="../assets/images/artikel/news7.png"
-                  alt=""
-                />
-                <div
-                  class="position-absolute text-white fs-4"
-                  style="margin-left: 1rem; bottom: 1rem; z-index: 2"
-                >
-                  Programmer zaman now
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <a href="" class="text-decoration-none text-end">More Stories ></a>
-      </div>
-
-      <!--Top Stories-->
-      <div>
-        <div class="fs-3 mb-md-3 fw-bold text-abu">Top Stories</div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="row">
-              <div class="col-md-6">
-                <a
-                  class="text-decoration-none"
-                  href="./detailArtikel/detailArtikel.html"
-                >
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news8.png"
-                    alt=""
-                  />
-                  <div class="fs-5 mt-md-2 text-black">
-                    Cara Mengoding dengan baik dan benar
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a
-                  class="text-decoration-none"
-                  href="./detailArtikel/detailArtikel.html"
-                >
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news9.png"
-                    alt=""
-                  />
-                  <div class="fs-5 mt-md-2 text-black">
-                    Tips membeli Laptop untuk mahasiswa Sistem Informasi
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="row mt-md-4">
-              <div class="col-md-6">
-                <a
-                  href="./detailArtikel/detailArtikel.html"
-                  class="text-decoration-none"
-                >
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news10.png"
-                    alt=""
-                  />
-                  <div class="text-black fs-5 mt-md-2">
-                    Pembelajaran di ero pandemi Covid-19
-                  </div>
-                </a>
-              </div>
-              <div class="col-md-6">
-                <a
-                  class="text-decoration-none"
-                  href="./detailArtikel/detailArtikel.html"
-                >
-                  <img
-                    class="img-fluid rounded-4"
-                    src="../assets/images/artikel/news11.png"
-                    alt=""
-                  />
-                  <div class="fs-5 mt-md-2 text-black">
-                    Sistem pembelajaran baru di tahun yang baru
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <a
-              href="./detailArtikel/detailArtikel.html"
-              class="text-decoration-none"
-            >
-              <img
-                class="img-fluid rounded-4"
-                src="../assets/images/artikel/news12.png"
-                alt=""
-              />
-              <div class="fs-5 mt-md-2 text-black">
-                HIMA SI UNUSA Sukses Gelar Workshop Videography Nasional 2021
-              </div>
-            </a>
-          </div>
-          <a href="" class="text-decoration-none text-end">More Stories ></a>
+        <div class="col-md-7 pb-2 pl-1">
+          <img
+            src="../assets/images/sejarah/1234.png"
+            class="img-fluid m-auto d-block rounded-sejarah"
+            alt=""
+          />
         </div>
       </div>
     </div>
 
-    <!--footer-->
+    <div class="container pt-5 pb-5">
+      <div class="row p-0 m-0 justify-content-center">
+        <div class="col-md-7 pb-2 pl-1">
+          <img
+            src="../assets/images/sejarah/123.png"
+            class="img-fluid m-auto d-block rounded-sejarah"
+            alt=""
+          />
+        </div>
+        <div class="col-md-5 pb-2 pl-1">
+          <h1 class="fw-bold text-danger">
+            Dasar <span class="text-dark">Pendirian</span>
+          </h1>
+          <p class="text-justify">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+            accusamus deleniti cupiditate adipisci provident nobis laboriosam,
+            et, debitis nulla consequatur sint? Ratione magni, voluptatibus ex
+            unde corporis voluptate quod reprehenderit ipsa ipsum ullam, atque
+            distinctio dolores asperiores aliquam, ad nostrum molestiae quis
+            perspiciatis molestias? Aliquam omnis fugit iste sed placeat
+            aspernatur illum consequuntur, voluptatibus ipsam neque modi
+            recusandae mollitia doloremque! Rem quo quis perspiciatis quod iusto
+            nihil alias molestias omnis illo. Nesciunt suscipit voluptates
+            facere illum id dicta provident porro veniam perspiciatis, nam non
+            at optio, repellat deleniti consequatur ipsam, tempore architecto
+            aut eius. Dolorum molestias ipsa iure consequuntur officia modi
+            illum voluptatem quo. Reiciendis distinctio placeat laborum aperiam
+            voluptates fugiat consectetur. Autem deleniti quam enim velit illum
+            commodi doloremque unde iusto fuga id? Quaerat.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!--Footer-->
     <div class="mt-5">
       <img src="../assets/images/Footer.png" class="img-fluid w-100" alt="" />
     </div>
@@ -335,7 +232,7 @@
                 </li>
                 <li>
                   <a
-                    href="javaScript:void(0)"
+                    href="./artikel.html"
                     class="font-thin text-white py-2 d-block"
                     >Artikel</a
                   >
